force-app/main/default/objects/NCMT_CEW_Parameter__c/NCMT_CEW_Parameter__c.object-meta.xml
<CustomObject>
    <label>CEW Parameter</label>
    <nameField>
        <label>Parameter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CEW Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>