force-app/main/default/objects/NCMT_CEW_Parameter__c/fields/Criteria_1__c.field-meta.xml
<CustomField>
    <fullName>Criteria_1__c</fullName>
    <label>Criteria 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>