force-app/main/default/objects/NCMT_CEW_Parameter__c/fields/Criteria_2__c.field-meta.xml
<CustomField>
    <fullName>Criteria_2__c</fullName>
    <label>Criteria 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>