force-app/main/default/objects/NCMT_CEW_Parameter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Criteria_1__c</columns>
    <columns>Criteria_2__c</columns>
    <columns>Value__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>